--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "Hello",
     "Greeter"
   ],
-  "author": "matcos",
+  "author": "MatCos10",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MatCos10/mat-awesome-greeter/issues"
